Update Blog Template · Bootstrap.html

--- a/Blog Template · Bootstrap.html
+++ b/Blog Template · Bootstrap.html
@@ -30,7 +30,53 @@
         */
         title {
 
+
         }
+
+        nav > * {
+          color:green ;
+        }
+
+        div.jumbotron a {
+          color: aqua;
+        }
+
+        .blog-post:first-of-type {
+          color: brown;
+        }
+
+        :link:nth-of-type(even){
+          color: aquamarine;
+        }
+
+        .blog-post:last-of-type {
+          color: aquamarine;
+        }
+
+        aside.blog-sidebar  ol:first-of-type li {
+          color: blueviolet;
+        }
+
+        .blog-post:nth-of-type(1) a:nth-child(1) {
+          color:blueviolet
+
+        }
+
+        a:last-of-type {
+          color: blueviolet;
+        }
+
+
+
+
+
+
+
+
+
+
+
+
 
         
 
