Update Blog Template · Bootstrap.html

--- a/Blog Template · Bootstrap.html
+++ b/Blog Template · Bootstrap.html
@@ -28,42 +28,42 @@
             EX9) Write a selector to target the "back to top" link     #### EXTRA Try doing it without targeting the footer element directly
             EX10) Write a selector to target the footer
         */
-        title {
+        h1 {
 
 
         }
 
         nav > * {
-          color:green ;
+          background-color:green !important ;
         }
 
-        div.jumbotron a {
-          color: aqua;
+        .jumbotron a {
+          background-color: aqua;
         }
 
         .blog-post:first-of-type {
-          color: brown;
+          background-color: brown;
         }
 
         :link:nth-of-type(even){
-          color: aquamarine;
+          background-color: aquamarine;
         }
 
         .blog-post:last-of-type {
-          color: aquamarine;
+          background-color: aquamarine;
         }
 
         aside.blog-sidebar  ol:first-of-type li {
-          color: blueviolet;
+          background-color: blueviolet;
         }
 
         .blog-post:nth-of-type(1) a:nth-child(1) {
-          color:blueviolet
+          background-color:blueviolet
 
         }
 
         a:last-of-type {
-          color: blueviolet;
+          background-color: blueviolet;
         }
 
 
@@ -557,7 +557,7 @@
     
       
 
-    }
+
   } 
 
 
